--- a/resource.qrc
+++ b/resource.qrc
@@ -1,17 +1,18 @@
 <RCC>
-    <qresource prefix="/images/frame">
-        <file alias="month_stub_0">resources/Images/month_image_stub.jpg</file>
-        <file alias="month_stub_1">resources/Images/month_image_stub.jpg</file>
-        <file alias="month_stub_2">resources/Images/month_image_stub.jpg</file>
-        <file alias="month_stub_3">resources/Images/month_image_stub.jpg</file>
-        <file alias="month_stub_4">resources/Images/month_image_stub.jpg</file>
-        <file alias="month_stub_5">resources/Images/month_image_stub.jpg</file>
-        <file alias="month_stub_6">resources/Images/month_image_stub.jpg</file>
-        <file alias="month_stub_7">resources/Images/month_image_stub.jpg</file>
-        <file alias="month_stub_8">resources/Images/month_image_stub.jpg</file>
-        <file alias="month_stub_9">resources/Images/month_image_stub.jpg</file>
-        <file alias="month_stub_10">resources/Images/month_image_stub.jpg</file>
-        <file alias="month_stub_11">resources/Images/month_image_stub.jpg</file>
+    <qresource prefix="/images/frame_1">
+        <file alias="month_stub_0">resources/Images/frame_1/month_image_stub.jpg</file>
+        <file alias="month_stub_1">resources/Images/frame_1/month_image_stub.jpg</file>
+        <file alias="month_stub_2">resources/Images/frame_1/month_image_stub.jpg</file>
+        <file alias="month_stub_3">resources/Images/frame_1/month_image_stub.jpg</file>
+        <file alias="month_stub_4">resources/Images/frame_1/month_image_stub.jpg</file>
+        <file alias="month_stub_5">resources/Images/frame_1/month_image_stub.jpg</file>
+        <file alias="month_stub_6">resources/Images/frame_1/month_image_stub.jpg</file>
+        <file alias="month_stub_7">resources/Images/frame_1/month_image_stub.jpg</file>
+        <file alias="month_stub_8">resources/Images/frame_1/month_image_stub.jpg</file>
+        <file alias="month_stub_9">resources/Images/frame_1/month_image_stub.jpg</file>
+        <file alias="month_stub_10">resources/Images/frame_1/month_image_stub.jpg</file>
+        <file alias="month_stub_11">resources/Images/frame_1/month_image_stub.jpg</file>
+        <file alias="foreground">resources/Images/frame_1/foreground.png</file>
     </qresource>
     <qresource prefix="/images/tune_photo">
         <file alias="background">resources/Images/tune_photo_background.jpg</file>
