--- a/resource.qrc
+++ b/resource.qrc
@@ -24,4 +24,7 @@
     <qresource prefix="/images/tune_photo">
         <file alias="background">resources/Images/tune_photo_background.jpg</file>
         </qresource>
+        <qresource prefix="/images/icons">
+            <file alias="edit">resources/Images/edit.png</file>
+            </qresource>
 </RCC>
