--- a/resource.qrc
+++ b/resource.qrc
@@ -39,5 +39,11 @@
           <file alias="edit_image@2x">resources/Images/edit_image.svg</file>
           <file alias="open">resources/Images/open.svg</file>
           <file alias="open@2x">resources/Images/open.svg</file>
+          <file alias="stars">resources/Images/stars.svg</file>
+          <file alias="stars@2x">resources/Images/stars.svg</file>
+          <file alias="rattles">resources/Images/rattles.svg</file>
+          <file alias="rattles@2x">resources/Images/rattles.svg</file>
+          <file alias="stars2">resources/Images/stars2.svg</file>
+          <file alias="stars2@2x">resources/Images/stars2.svg</file>
     </qresource>
 </RCC>
