--- a/resource.qrc
+++ b/resource.qrc
@@ -49,7 +49,8 @@
           <file alias="open_button@2x">resources/Images/open_button.svg</file>
     </qresource>
     <qresource prefix="/fonts">
-        <file alias="header_1_font">resources/Fonts/Bellany.otf</file>
+       <file alias="header_1_font">resources/Fonts/Bellany.otf</file>
+       <file alias="text_1_font">resources/Fonts/MyKidsHandwritten-8MZrn.otf</file>
     </qresource>
 
 </RCC>
