--- a/resource.qrc
+++ b/resource.qrc
@@ -26,16 +26,6 @@
 <file alias="month_stub_10@2x">resources/Images/month_stubs/month_image_stub.svg</file>
 <file alias="month_stub_11@2x">resources/Images/month_stubs/month_image_stub.svg</file>
     </qresource>
-    <qresource prefix="/images/frame_1">
-        <file alias="foreground">resources/Images/frame_1/foreground.png</file>
-        <file alias="foreground_to_render">resources/Images/frame_1/foreground_to_render.png</file>
-        <file alias="1">resources/Images/frame_1/1</file>
-    </qresource>
-    <qresource prefix="/images/frame_2">
-        <file alias="foreground">resources/Images/frame_2/foreground.png</file>
-        <file alias="foreground_to_render">resources/Images/frame_2/foreground_to_render.png</file>
-          <file alias="2">resources/Images/frame_2/2</file>
-    </qresource>
     <qresource prefix="/images/tune_photo"/>
     <qresource prefix="/images/icons">
     <file alias="wood">resources/Images/wood.svg</file>
@@ -66,5 +56,15 @@
     <qresource prefix="/fonts">
         <file alias="header_1_font">resources/Fonts/Bellany.otf</file>
         <file alias="text_1_font">resources/Fonts/MyKidsHandwritten-8MZrn.otf</file>
+    </qresource>
+    <qresource prefix="/frames/frame_1">
+        <file alias="foreground">resources/Frames/frame_1/foreground.png</file>
+        <file alias="foreground_to_render">resources/Frames/frame_1/foreground_to_render.png</file>
+        <file alias="1">resources/Frames/frame_1/1.json</file>
+    </qresource>
+    <qresource prefix="/frames/frame_2">
+        <file alias="foreground">resources/Frames/frame_2/foreground.png</file>
+        <file alias="foreground_to_render">resources/Frames/frame_2/foreground_to_render.png</file>
+          <file alias="2">resources/Frames/frame_2/2.json</file>
     </qresource>
 </RCC>
