--- a/resource.qrc
+++ b/resource.qrc
@@ -73,4 +73,19 @@
         <file alias="foreground_to_render">resources/Frames/colors/foreground_to_render.png</file>
           <file alias="properties">resources/Frames/colors/properties.json</file>
     </qresource>
+    <qresource prefix="/frames/stars">
+        <file alias="foreground">resources/Frames/stars/foreground.png</file>
+        <file alias="foreground_to_render">resources/Frames/stars/foreground_to_render.png</file>
+          <file alias="properties">resources/Frames/stars/properties.json</file>
+    </qresource>
+    <qresource prefix="/frames/baloons">
+        <file alias="foreground">resources/Frames/baloons/foreground.png</file>
+        <file alias="foreground_to_render">resources/Frames/baloons/foreground_to_render.png</file>
+          <file alias="properties">resources/Frames/baloons/properties.json</file>
+    </qresource>
+    <qresource prefix="/frames/shapes">
+        <file alias="foreground">resources/Frames/shapes/foreground.png</file>
+        <file alias="foreground_to_render">resources/Frames/shapes/foreground_to_render.png</file>
+          <file alias="properties">resources/Frames/shapes/properties.json</file>
+    </qresource>
 </RCC>
