--- a/resource.qrc
+++ b/resource.qrc
@@ -83,6 +83,11 @@
         <file alias="foreground_to_render">resources/Frames/giraffe/foreground_to_render.png</file>
           <file alias="properties">resources/Frames/giraffe/properties.json</file>
     </qresource>
+    <qresource prefix="/frames/rainbow">
+        <file alias="foreground">resources/Frames/rainbow/foreground.png</file>
+        <file alias="foreground_to_render">resources/Frames/rainbow/foreground_to_render.png</file>
+          <file alias="properties">resources/Frames/rainbow/properties.json</file>
+    </qresource>
     <qresource prefix="/frames/stars">
         <file alias="foreground">resources/Frames/stars/foreground.png</file>
         <file alias="foreground_to_render">resources/Frames/stars/foreground_to_render.png</file>
