--- a/resource.qrc
+++ b/resource.qrc
@@ -73,7 +73,7 @@
     <file alias="header_2_font">resources/Fonts/ru/BubbleSans-Regular.otf</file>
     <file alias="header_3_font">resources/Fonts/ru/Cruinn_Regular.ttf</file>
     <file alias="header_10_font">resources/Fonts/ru/Sacramento.ttf</file>
-     <file alias="header_11_font">resources/Fonts/ru/Vitaliy Tsygankov - TS Remarker Regular 2.otf</file>
+     <file alias="header_11_font">resources/Fonts/ru/BadScript-Regular.ttf</file>
      <file alias="header_12_font">resources/Fonts/ru/ComicHelvetic_Medium.otf</file>
      <file alias="header_13_font">resources/Fonts/ru/monof55.ttf</file>
      <file alias="header_14_font">resources/Fonts/ru/Vasek Italic_0.ttf</file>
